--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <ul>
     <li><a href="oo-ibiza-m-10k.html">IBIZA 2025 - Men's 10K</a></li>
     <li><a href="oo-ibiza-w-10k.html">IBIZA 2025 - Women's 10K</a></li>
+    <li><a href="oo-ibiza-mj-10k.html">IBIZA 2025 - Junior Men's 10K</a></li>
+    <li><a href="oo-ibiza-wj-10k.html">IBIZA 2025 - Junior Women's 10K</a></li>
   </ul>
 </body>
 </html>
