--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <li><a href="oo-ibiza-w-10k.html">IBIZA 2025 - Women's 10K</a></li>
     <li><a href="oo-ibiza-mj-10k.html">IBIZA 2025 - Junior Men's 10K</a></li>
     <li><a href="oo-ibiza-wj-10k.html">IBIZA 2025 - Junior Women's 10K</a></li>
+    <li><a href="https://open-water-charts.github.io/oo/oo-setubal-m-10k.html">SETÚBAL 2025 - Men's 10K</a></li>
+    <li><a href="https://open-water-charts.github.io/oo/oo-setubal-f-10k.html">SETÚBAL 2025 - Women's 10K</a></li>
   </ul>
 </body>
 </html>
